--- a/frontend/src/assets/css/material-dashboard-react.css
+++ b/frontend/src/assets/css/material-dashboard-react.css
@@ -243,14 +243,14 @@ footer ul li a:hover {
   font-weight: 300;
   line-height: 1.5em;
   position: fixed;
-  top: 180px;
+  top: 500px;
   right: 0;
-  width: 64px;
-  background: rgba(0, 0, 0, 0.3);
+  /*width: 64px;*/
+  /*background: rgba(0, 0, 0, 0.3);*/
   z-index: 1031;
-  border-radius: 8px 0 0 8px;
+  /*border-radius: 8px 0 0 8px;*/
   text-align: center;
-  top: 120px;
+  /*top: 120px;*/
   .badge-primary-background-color: #9c27b0;
 }
 
