Some updates in files. Setup skeleton for loading data in dashboard.

--- a/frontend/src/assets/css/material-dashboard-react.css
+++ b/frontend/src/assets/css/material-dashboard-react.css
@@ -243,7 +243,8 @@ footer ul li a:hover {
   font-weight: 300;
   line-height: 1.5em;
   position: fixed;
-  top: 500px;
+  /*top: 500px;*/
+  bottom: 120px;
   right: 0;
   /*width: 64px;*/
   /*background: rgba(0, 0, 0, 0.3);*/
