--- a/frontend/src/assets/css/material-dashboard-react.css
+++ b/frontend/src/assets/css/material-dashboard-react.css
@@ -510,3 +510,17 @@ footer ul li a:hover {
 * {
   letter-spacing: normal !important;
 }
+
+.custom-tooltip {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 75px;
+  height: 40px;
+  background-color: rgba(255,255,255, 0.85);
+  font-family: Source Sans Pro,Hiragino Sans GB,Arial,sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #666;
+}
